--- a/25_Python_Projects_for_Beginners.ipynb
+++ b/25_Python_Projects_for_Beginners.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPo8eA5xM3f58ugkDbj/dC2",
+      "authorship_tag": "ABX9TyOTKEyTtUzFoWR+Y0eIzva4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1070,21 +1070,98 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "5nT5-gO8KzIm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
       "source": [
-        "# **Photo Manipulation**"
+        "def find_next_empty_space(puzzle):\n",
+        "  # each empty space will be represented by -1\n",
+        "  # EDGE CASE: when there is not a single, empty space, we will return (NONE, NONE)\n",
+        "\n",
+        "  for r in range(9):\n",
+        "    for c in range(9):\n",
+        "      if puzzle[r][c] == -1:\n",
+        "        return r, c\n",
+        "\n",
+        "  return None, None\n",
+        "\n",
+        "\n",
+        "\n",
+        "def is_valid(puzzle, guess, row, col):\n",
+        "  # this function will be checking that guess is valid or not, according to SUDOKU rules.\n",
+        "  row_values = puzzle[row]\n",
+        "\n",
+        "  if guess in row_values: # first rule, if your guessed value is in the row, the guess is invalid\n",
+        "    return False\n",
+        "\n",
+        "  col_values = [puzzle[i][col] for i in range(9)] #comprehension to get the column values.\n",
+        "  if guess in col_values:\n",
+        "    return False\n",
+        "\n",
+        "  # now check for the small 3x3, grid, that the guess is in that or not.\n",
+        "  row_start = (row // 3) * 3 # to get the row index, of the grid\n",
+        "  col_start = (col // 3) * 3 # to get the column index of the grid.\n",
+        "  for r in range(row_start, row_start + 3):\n",
+        "    for c in range(col_start, col_start + 3):\n",
+        "      if puzzle[r][c] == guess:\n",
+        "        return False\n",
+        "\n",
+        "  return True\n",
+        "\n",
+        "def sudoku_solve_func(puzzle):\n",
+        "  # the argument \"puzzle\" will be a valid puzzle (a 9x9 grid), which the function will try to solve using BackTracking.\n",
+        "\n",
+        "  # this helper function will be traversing through each row, and will be providing the index of the empty space where we can put a value.\n",
+        "  row, col = find_next_empty_space(puzzle)\n",
+        "\n",
+        "  # first Edge case, when we've traversed through the puzzle and there is no place to put a value.\n",
+        "  if row is None:\n",
+        "    return True\n",
+        "\n",
+        "  # if there is an empty space, we'll start guessing value to put it in there.\n",
+        "  for guess in range(1, 10):\n",
+        "    if is_valid(puzzle, guess, row, col):\n",
+        "      puzzle[row][col] = guess\n",
+        "\n",
+        "      if sudoku_solve_func(puzzle):\n",
+        "        return True\n",
+        "\n",
+        "    puzzle[row][col] = -1\n",
+        "\n",
+        "  return False\n",
+        "\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "   sudoku_puzzle = [\n",
+        "    [5, 3, -1, -1, 7, -1, -1, -1, -1],\n",
+        "    [6, -1, -1, 1, 9, 5, -1, -1, -1],\n",
+        "    [-1, 9, 8, -1, -1, -1, -1, 6, -1],\n",
+        "    [8, -1, -1, -1, 6, -1, -1, -1, 3],\n",
+        "    [4, -1, -1, 8, -1, 3, -1, -1, 1],\n",
+        "    [7, -1, -1, -1, 2, -1, -1, -1, 6],\n",
+        "    [-1, 6, -1, -1, -1, -1, 2, 8, -1],\n",
+        "    [-1, -1, -1, 4, 1, 9, -1, -1, 5],\n",
+        "    [-1, -1, -1, -1, 8, -1, -1, 7, 9]\n",
+        "   ]\n",
+        "\n",
+        "   sudoku_solve_func(sudoku_puzzle)\n",
+        "   print(sudoku_puzzle)\n"
       ],
       "metadata": {
-        "id": "R_4fWSwhOrx1"
-      }
+        "id": "5nT5-gO8KzIm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1691f03b-92e3-4ca9-824c-1f23365ecb56"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[5, 3, 4, 6, 7, 8, 9, 1, 2], [6, 7, 2, 1, 9, 5, 3, 4, 8], [1, 9, 8, 3, 4, 2, 5, 6, 7], [8, 5, 9, 7, 6, 1, 4, 2, 3], [4, 2, 6, 8, 5, 3, 7, 9, 1], [7, 1, 3, 9, 2, 4, 8, 5, 6], [9, 6, 1, 5, 3, 7, 2, 8, 4], [2, 8, 7, 4, 1, 9, 6, 3, 5], [3, 4, 5, 2, 8, 6, 1, 7, 9]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
