--- a/25_Python_Projects_for_Beginners.ipynb
+++ b/25_Python_Projects_for_Beginners.ipynb
@@ -767,6 +767,9 @@
         }
       ],
       "source": [
+        "# VISUAL (Streamlit) VERSION IN \"binary_search\" DIRECTORY\n",
+        "\n",
+        "\n",
         "def binary_search(lst: list, target: int, low=None, high=None):\n",
         "  if low is None:\n",
         "    low = 0\n",
