added random module

--- a/25_Python_Projects_for_Beginners.ipynb
+++ b/25_Python_Projects_for_Beginners.ipynb
@@ -89,6 +89,7 @@
       },
       "outputs": [],
       "source": [
+        "import random\n",
         "def guess(x):\n",
         "  random_number = random.randint(1, x)\n",
         "  guess = 0\n",
